html: mark up done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,202 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Nav -->
+    <nav class="navigation">
+      <img src="" alt="" class="snow-logo" />
+      <ul class="nav-menu">
+        <li>ABOUT</li>
+        <li>CONTACT</li>
+        <li>PORTFOLIO</li>
+        <li>BLOG</li>
+      </ul>
+    </nav>
+    <!-- home -->
+    <section id="home">
+      <!-- background image 있음, 100vh -->
+      <div class="home-container">
+        <div class="home-titles">
+          <h3>NEW BRANDING AGENCY</h3>
+          <h1>We are about to change the way</h1>
+          <h2>you publish on the web</h2>
+        </div>
+        <button class="down-btn">
+          <i class="fas fa-chevron-down"></i>
+        </button>
+      </div>
+    </section>
+    <!-- About -->
+    <section id="about">
+      <div class="about-agency-container">
+        <h1 class="about-title">About Our Agency</h1>
+        <p class="about-description">
+          We are a new design studio based in USA. We have over 20 years of
+          combined experience, and know a thing or two about designing websites
+          and mobile apps. Clever use of technology and lean processes enable us
+          to work faster and smarter.
+        </p>
+        <img src="" alt="" class="about-signature" />
+      </div>
+      <div class="about-props-container">
+        <div class="about-prop">
+          <i class="fas fa-briefcase"></i>
+          <div class="prop-num">548</div>
+          <div class="prop-name">PROJECTS COMPLETED</div>
+        </div>
+        <div class="about-prop">
+          <i class="far fa-clock"></i>
+          <div class="prop-num">1465</div>
+          <div class="prop-name">WORKING HOURS</div>
+        </div>
+        <div class="about-prop">
+          <i class="far fa-star"></i>
+          <div class="prop-num">612</div>
+          <div class="prop-name">POSITIVE FEEDBACKS</div>
+        </div>
+        <div class="about-prop">
+          <i class="far fa-heart"></i>
+          <div class="prop-num">735</div>
+          <div class="prop-name">HAPPY CLIENTS</div>
+        </div>
+      </div>
+    </section>
+    <!-- Projects -->
+    <section id="project">
+      <div class="project-container">
+        <h1 class="project-title">Best Projects</h1>
+        <p class="project-description">
+          Donec orci sem, pretium ac dolor et, faucibus faucibus mauris.
+          Etiam,pellentesque faucibus. Vestibulum gravida volutpat ipsum non
+          ultrices.
+        </p>
+        <div class="project-lists">
+          <div class="first-row">
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+          </div>
+          <div class="second-row">
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+          </div>
+          <div class="third-row">
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+            <img src="" alt="" class="list" />
+          </div>
+        </div>
+      </div>
+      <div class="project-testimonial">
+        <div class="testimonial-feedback">
+          <p class="feedback-description">
+            Outstanding job and exceeded all expectations. It was a pleasure to
+            work with them on a sizable first project and am looking forward to
+            start the next one asap.
+          </p>
+          <span class="feedback-talker">MICHAEL HOPKINS</span>
+          <button class="count-btn"></button>
+          <!-- button 3개?? 이거 어떻게 구현하는지 -->
+        </div>
+        <!-- 돌아감 -->
+        <div class="testimonial-examples">
+          <img src="" alt="" class="example" />
+          <img src="" alt="" class="example" />
+          <img src="" alt="" class="example" />
+          <img src="" alt="" class="example" />
+        </div>
+      </div>
+    </section>
+    <!-- Blog -->
+    <section id="blog">
+      <div class="blog-container">
+        <h1 class="blog-title">Latest Blog</h1>
+        <p class="blog-description">
+          Donec orci sem, pretium ac dolor et, faucibus faucibus mauris.
+          Etiam,pellentesque faucibus. <br />
+          Vestibulum gravida volutpat ipsum non ultrices.
+        </p>
+        <div class="blog-card-container">
+          <div class="blog-card">
+            <img src="" alt="" class="card-image" />
+            <h2 class="card-title">Why you should Always First</h2>
+            <p class="card-date">AUGUST 14, 2016</p>
+            <p class="card-description">
+              Lights give have herb. First. Seed lesser his a fruit. Stars good
+              divide fish appear don't, third deep.
+            </p>
+          </div>
+          <div class="blog-card">
+            <img src="" alt="" class="card-image" />
+            <h2 class="card-title">Why you should Always First</h2>
+            <p class="card-date">AUGUST 14, 2016</p>
+            <p class="card-description">
+              Lights give have herb. First. Seed lesser his a fruit. Stars good
+              divide fish appear don't, third deep.
+            </p>
+          </div>
+          <div class="blog-card">
+            <img src="" alt="" class="card-image" />
+            <h2 class="card-title">Why you should Always First</h2>
+            <p class="card-date">AUGUST 14, 2016</p>
+            <p class="card-description">
+              Lights give have herb. First. Seed lesser his a fruit. Stars good
+              divide fish appear don't, third deep.
+            </p>
+          </div>
+          <div class="blog-card">
+            <img src="" alt="" class="card-image" />
+            <h2 class="card-title">Why you should Always First</h2>
+            <p class="card-date">AUGUST 14, 2016</p>
+            <p class="card-description">
+              Lights give have herb. First. Seed lesser his a fruit. Stars good
+              divide fish appear don't, third deep.
+            </p>
+          </div>
+          <div class="blog-card">
+            <img src="" alt="" class="card-image" />
+            <h2 class="card-title">Why you should Always First</h2>
+            <p class="card-date">AUGUST 14, 2016</p>
+            <p class="card-description">
+              Lights give have herb. First. Seed lesser his a fruit. Stars good
+              divide fish appear don't, third deep.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact -->
+    <section id="contact">
+      <div class="contact-info-container">
+        <h1 class="info-title">Contact Info:</h1>
+        <p class="info-description">
+          Praesent interdum congue mauris, et fringilla lacus pel vitae. Quisque
+          nisl mauris, aliquam eu ultrices vel, conse vitae sapien at imperdiet
+          risus. Quisque cursus risus id. fermentum, in auctor quam consectetur.
+        </p>
+        <ul class="info-lists">
+          <span>Address:</span>
+          <li><span>Address:</span> 10111 Santa Monica Boulevard, LA</li>
+          <li><span>Phone:</span> +44 987 065 908</li>
+          <li><span>Email:</span> info@Example.com</li>
+          <li><span>Fax:</span> +44 987 065 909</li>
+        </ul>
+      </div>
+      <form action="submit" class="customer-info-form">
+        <input type="text" class="name" />
+        <input type="text" class="email" />
+        <input type="text" class="title" />
+        <input type="text" class="comment" />
+        <button class="send-btn">SEND MESSAGE</button>
+      </form>
+      <div class="contact-link">
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-dribbble"></i>
+        <i class="fab fa-instagram"></i>
+        <p class="copyright">2016 © Design by Unvab. Code by nK</p>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
