css: starting with nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Nav -->
     <nav class="navigation">
-      <img src="" alt="" class="snow-logo" />
+      <img src="images/logo.png" alt="logo" class="snow-logo" />
       <ul class="nav-menu">
         <li>ABOUT</li>
         <li>CONTACT</li>
