css: nav and home

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <!-- Nav -->
     <nav class="navigation">
-      <img src="images/logo.png" alt="logo" class="snow-logo" />
+      <a href="index.html" class="nav-logo">
+        <img src="images/logo.png" alt="logo" class="snow-logo" />
+      </a>
       <ul class="nav-menu">
         <li>ABOUT</li>
         <li>CONTACT</li>
@@ -24,6 +26,7 @@
     </nav>
     <!-- home -->
     <section id="home">
+      <div class="home-bg-image"></div>
       <!-- background image 있음, 100vh -->
       <div class="home-container">
         <div class="home-titles">
