css: about-agency

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
           and mobile apps. Clever use of technology and lean processes enable us
           to work faster and smarter.
         </p>
-        <img src="" alt="" class="about-signature" />
+        <img
+          src="images/about-me-signature.png"
+          alt="signature"
+          class="about-signature"
+        />
       </div>
       <div class="about-props-container">
         <div class="about-prop">
