--- a/index.html
+++ b/index.html
@@ -58,23 +58,31 @@
       <div class="about-props-container">
         <div class="about-prop">
           <i class="fas fa-briefcase"></i>
-          <div class="prop-num">548</div>
-          <div class="prop-name">PROJECTS COMPLETED</div>
+          <div class="prop-props">
+            <div class="prop-num">548</div>
+            <div class="prop-name">PROJECTS COMPLETED</div>
+          </div>
         </div>
         <div class="about-prop">
           <i class="far fa-clock"></i>
-          <div class="prop-num">1465</div>
-          <div class="prop-name">WORKING HOURS</div>
+          <div class="prop-props">
+            <div class="prop-num">1465</div>
+            <div class="prop-name">WORKING HOURS</div>
+          </div>
         </div>
         <div class="about-prop">
           <i class="far fa-star"></i>
-          <div class="prop-num">612</div>
-          <div class="prop-name">POSITIVE FEEDBACKS</div>
+          <div class="prop-props">
+            <div class="prop-num">612</div>
+            <div class="prop-name">POSITIVE FEEDBACKS</div>
+          </div>
         </div>
         <div class="about-prop">
           <i class="far fa-heart"></i>
-          <div class="prop-num">735</div>
-          <div class="prop-name">HAPPY CLIENTS</div>
+          <div class="prop-props">
+            <div class="prop-num">735</div>
+            <div class="prop-name">HAPPY CLIENTS</div>
+          </div>
         </div>
       </div>
     </section>
