css: projects but a lot to go

--- a/index.html
+++ b/index.html
@@ -96,40 +96,61 @@
           ultrices.
         </p>
         <div class="project-lists">
-          <div class="first-row">
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-          </div>
-          <div class="second-row">
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-          </div>
-          <div class="third-row">
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-            <img src="" alt="" class="list" />
-          </div>
+          <img src="images/portfolio-1-sm.jpg" alt="portfolio-1" class="list" />
+          <img src="images/portfolio-2-sm.jpg" alt="portfolio-2" class="list" />
+          <img src="images/portfolio-3-sm.jpg" alt="portfolio-3" class="list" />
+          <img src="images/portfolio-4-sm.jpg" alt="portfolio-4" class="list" />
+          <img src="images/portfolio-5-sm.jpg" alt="portfolio-5" class="list" />
+          <img src="images/portfolio-6-sm.jpg" alt="portfolio-6" class="list" />
+          <img src="images/portfolio-7-sm.jpg" alt="portfolio-7" class="list" />
+          <img src="images/portfolio-8-sm.jpg" alt="portfolio-8" class="list" />
+          <img src="images/portfolio-9-sm.jpg" alt="portfolio-9" class="list" />
         </div>
       </div>
       <div class="project-testimonial">
         <div class="testimonial-feedback">
-          <p class="feedback-description">
-            Outstanding job and exceeded all expectations. It was a pleasure to
-            work with them on a sizable first project and am looking forward to
-            start the next one asap.
-          </p>
-          <span class="feedback-talker">MICHAEL HOPKINS</span>
-          <button class="count-btn"></button>
+          <div class="feedback-wrap">
+            <p class="feedback-description">
+              Outstanding job and exceeded all expectations. It was a pleasure
+              to work with them on a sizable first project and am looking
+              forward to start the next one asap.
+            </p>
+            <span class="feedback-talker">MICHAEL HOPKINS</span>
+          </div>
           <!-- button 3개?? 이거 어떻게 구현하는지 -->
+          <div class="button-container">
+            <button class="count-btn"></button>
+            <button class="count-btn"></button>
+            <button class="count-btn"></button>
+          </div>
         </div>
         <!-- 돌아감 -->
         <div class="testimonial-examples">
-          <img src="" alt="" class="example" />
-          <img src="" alt="" class="example" />
-          <img src="" alt="" class="example" />
-          <img src="" alt="" class="example" />
+          <img
+            src="images/partner-logo-1-dark.png"
+            alt="partner1"
+            class="example"
+          />
+          <img
+            src="images/partner-logo-2-dark.png"
+            alt="partner2"
+            class="example"
+          />
+          <img
+            src="images/partner-logo-3-dark.png"
+            alt="partner3"
+            class="example"
+          />
+          <img
+            src="images/partner-logo-4-dark.png"
+            alt="partner4"
+            class="example"
+          />
+          <img
+            src="images/partner-logo-5-dark.png"
+            alt="partner5"
+            class="example"
+          />
         </div>
       </div>
     </section>
