css: blog structure

--- a/index.html
+++ b/index.html
@@ -165,50 +165,45 @@
         </p>
         <div class="blog-card-container">
           <div class="blog-card">
-            <img src="" alt="" class="card-image" />
-            <h2 class="card-title">Why you should Always First</h2>
-            <p class="card-date">AUGUST 14, 2016</p>
-            <p class="card-description">
-              Lights give have herb. First. Seed lesser his a fruit. Stars good
-              divide fish appear don't, third deep.
-            </p>
+            <img src="images/post-1-mid.jpg" alt="post1" class="card-image" />
+            <div class="card-info">
+              <h2 class="card-title">Why you should Always First</h2>
+              <p class="card-date">AUGUST 14, 2016</p>
+              <p class="card-description">
+                Lights give have herb. First. Seed lesser his a fruit. Stars
+                good divide fish appear don't, third deep.
+              </p>
+            </div>
           </div>
           <div class="blog-card">
-            <img src="" alt="" class="card-image" />
-            <h2 class="card-title">Why you should Always First</h2>
-            <p class="card-date">AUGUST 14, 2016</p>
-            <p class="card-description">
-              Lights give have herb. First. Seed lesser his a fruit. Stars good
-              divide fish appear don't, third deep.
-            </p>
+            <img src="images/post-1-mid.jpg" alt="post2" class="card-image" />
+            <div class="card-info">
+              <h2 class="card-title">Why you should Always First</h2>
+              <p class="card-date">AUGUST 14, 2016</p>
+              <p class="card-description">
+                Lights give have herb. First. Seed lesser his a fruit. Stars
+                good divide fish appear don't, third deep.
+              </p>
+            </div>
           </div>
           <div class="blog-card">
-            <img src="" alt="" class="card-image" />
-            <h2 class="card-title">Why you should Always First</h2>
-            <p class="card-date">AUGUST 14, 2016</p>
-            <p class="card-description">
-              Lights give have herb. First. Seed lesser his a fruit. Stars good
-              divide fish appear don't, third deep.
-            </p>
+            <img src="images/post-3-mid.jpg" alt="post3" class="card-image" />
+            <div class="card-info">
+              <h2 class="card-title">Why you should Always First</h2>
+              <p class="card-date">AUGUST 14, 2016</p>
+              <p class="card-description">
+                Lights give have herb. First. Seed lesser his a fruit. Stars
+                good divide fish appear don't, third deep.
+              </p>
+            </div>
           </div>
-          <div class="blog-card">
-            <img src="" alt="" class="card-image" />
-            <h2 class="card-title">Why you should Always First</h2>
-            <p class="card-date">AUGUST 14, 2016</p>
-            <p class="card-description">
-              Lights give have herb. First. Seed lesser his a fruit. Stars good
-              divide fish appear don't, third deep.
-            </p>
-          </div>
-          <div class="blog-card">
-            <img src="" alt="" class="card-image" />
-            <h2 class="card-title">Why you should Always First</h2>
-            <p class="card-date">AUGUST 14, 2016</p>
-            <p class="card-description">
-              Lights give have herb. First. Seed lesser his a fruit. Stars good
-              divide fish appear don't, third deep.
-            </p>
-          </div>
+        </div>
+        <div class="button-container">
+          <button class="count-btn"></button>
+          <button class="count-btn"></button>
+          <button class="count-btn"></button>
+          <button class="count-btn"></button>
+          <button class="count-btn"></button>
         </div>
       </div>
     </section>
