css: contact link

--- a/index.html
+++ b/index.html
@@ -209,33 +209,38 @@
     </section>
     <!-- Contact -->
     <section id="contact">
-      <div class="contact-info-container">
-        <h1 class="info-title">Contact Info:</h1>
-        <p class="info-description">
-          Praesent interdum congue mauris, et fringilla lacus pel vitae. Quisque
-          nisl mauris, aliquam eu ultrices vel, conse vitae sapien at imperdiet
-          risus. Quisque cursus risus id. fermentum, in auctor quam consectetur.
-        </p>
-        <ul class="info-lists">
-          <span>Address:</span>
-          <li><span>Address:</span> 10111 Santa Monica Boulevard, LA</li>
-          <li><span>Phone:</span> +44 987 065 908</li>
-          <li><span>Email:</span> info@Example.com</li>
-          <li><span>Fax:</span> +44 987 065 909</li>
-        </ul>
+      <div class="contact-wrap">
+        <div class="contact-info-container">
+          <h1 class="info-title">Contact Info:</h1>
+          <p class="info-description">
+            Praesent interdum congue mauris, et fringilla lacus pel vitae.
+            Quisque nisl mauris, aliquam eu ultrices vel, conse vitae sapien at
+            imperdiet risus. Quisque cursus risus id. fermentum, in auctor quam
+            consectetur.
+          </p>
+          <ul class="info-lists">
+            <span>Address:</span>
+            <li><span>Address:</span> 10111 Santa Monica Boulevard, LA</li>
+            <li><span>Phone:</span> +44 987 065 908</li>
+            <li><span>Email:</span> info@Example.com</li>
+            <li><span>Fax:</span> +44 987 065 909</li>
+          </ul>
+        </div>
+        <form action="submit" class="customer-info-form">
+          <input type="text" class="name" />
+          <input type="text" class="email" />
+          <input type="text" class="title" />
+          <input type="text" class="comment" />
+          <button class="send-btn">SEND MESSAGE</button>
+        </form>
       </div>
-      <form action="submit" class="customer-info-form">
-        <input type="text" class="name" />
-        <input type="text" class="email" />
-        <input type="text" class="title" />
-        <input type="text" class="comment" />
-        <button class="send-btn">SEND MESSAGE</button>
-      </form>
       <div class="contact-link">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-dribbble"></i>
-        <i class="fab fa-instagram"></i>
+        <div class="icon-container">
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-dribbble"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
         <p class="copyright">2016 © Design by Unvab. Code by nK</p>
       </div>
     </section>
