css: modifying whole structure
added max width

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
   <body>
     <!-- Nav -->
     <nav class="navigation">
-      <a href="index.html" class="nav-logo">
-        <img src="images/logo.png" alt="logo" class="snow-logo" />
-      </a>
-      <ul class="nav-menu">
-        <li>ABOUT</li>
-        <li>CONTACT</li>
-        <li>PORTFOLIO</li>
-        <li>BLOG</li>
-      </ul>
+      <div class="nav-wrap">
+        <a href="index.html" class="nav-logo">
+          <img src="images/logo.png" alt="logo" class="snow-logo" />
+        </a>
+        <ul class="nav-menu">
+          <li>ABOUT</li>
+          <li>CONTACT</li>
+          <li>PORTFOLIO</li>
+          <li>BLOG</li>
+        </ul>
+      </div>
     </nav>
     <!-- home -->
     <section id="home">
