css: whole structure done without details
need to add a font weight,
media query

--- a/index.html
+++ b/index.html
@@ -58,32 +58,34 @@
         />
       </div>
       <div class="about-props-container">
-        <div class="about-prop">
-          <i class="fas fa-briefcase"></i>
-          <div class="prop-props">
-            <div class="prop-num">548</div>
-            <div class="prop-name">PROJECTS COMPLETED</div>
+        <div class="about-props-wrap">
+          <div class="about-prop">
+            <i class="fas fa-briefcase"></i>
+            <div class="prop-props">
+              <div class="prop-num">548</div>
+              <div class="prop-name">PROJECTS COMPLETED</div>
+            </div>
           </div>
-        </div>
-        <div class="about-prop">
-          <i class="far fa-clock"></i>
-          <div class="prop-props">
-            <div class="prop-num">1465</div>
-            <div class="prop-name">WORKING HOURS</div>
+          <div class="about-prop">
+            <i class="far fa-clock"></i>
+            <div class="prop-props">
+              <div class="prop-num">1465</div>
+              <div class="prop-name">WORKING HOURS</div>
+            </div>
           </div>
-        </div>
-        <div class="about-prop">
-          <i class="far fa-star"></i>
-          <div class="prop-props">
-            <div class="prop-num">612</div>
-            <div class="prop-name">POSITIVE FEEDBACKS</div>
+          <div class="about-prop">
+            <i class="far fa-star"></i>
+            <div class="prop-props">
+              <div class="prop-num">612</div>
+              <div class="prop-name">POSITIVE FEEDBACKS</div>
+            </div>
           </div>
-        </div>
-        <div class="about-prop">
-          <i class="far fa-heart"></i>
-          <div class="prop-props">
-            <div class="prop-num">735</div>
-            <div class="prop-name">HAPPY CLIENTS</div>
+          <div class="about-prop">
+            <i class="far fa-heart"></i>
+            <div class="prop-props">
+              <div class="prop-num">735</div>
+              <div class="prop-name">HAPPY CLIENTS</div>
+            </div>
           </div>
         </div>
       </div>
@@ -169,6 +171,7 @@
           <div class="blog-card">
             <img src="images/post-1-mid.jpg" alt="post1" class="card-image" />
             <div class="card-info">
+              <button class="card-tag">DESIGN</button>
               <h2 class="card-title">Why you should Always First</h2>
               <p class="card-date">AUGUST 14, 2016</p>
               <p class="card-description">
@@ -180,6 +183,7 @@
           <div class="blog-card">
             <img src="images/post-1-mid.jpg" alt="post2" class="card-image" />
             <div class="card-info">
+              <button class="card-tag">NATURE</button>
               <h2 class="card-title">Why you should Always First</h2>
               <p class="card-date">AUGUST 14, 2016</p>
               <p class="card-description">
@@ -191,6 +195,7 @@
           <div class="blog-card">
             <img src="images/post-3-mid.jpg" alt="post3" class="card-image" />
             <div class="card-info">
+              <button class="card-tag">NATURE</button>
               <h2 class="card-title">Why you should Always First</h2>
               <p class="card-date">AUGUST 14, 2016</p>
               <p class="card-description">
