css: projects list description hover display

--- a/index.html
+++ b/index.html
@@ -100,15 +100,105 @@
           ultrices.
         </p>
         <div class="project-lists">
-          <img src="images/portfolio-1-sm.jpg" alt="portfolio-1" class="list" />
-          <img src="images/portfolio-2-sm.jpg" alt="portfolio-2" class="list" />
-          <img src="images/portfolio-3-sm.jpg" alt="portfolio-3" class="list" />
-          <img src="images/portfolio-4-sm.jpg" alt="portfolio-4" class="list" />
-          <img src="images/portfolio-5-sm.jpg" alt="portfolio-5" class="list" />
-          <img src="images/portfolio-6-sm.jpg" alt="portfolio-6" class="list" />
-          <img src="images/portfolio-7-sm.jpg" alt="portfolio-7" class="list" />
-          <img src="images/portfolio-8-sm.jpg" alt="portfolio-8" class="list" />
-          <img src="images/portfolio-9-sm.jpg" alt="portfolio-9" class="list" />
+          <div class="list">
+            <img
+              src="images/portfolio-1-sm.jpg"
+              alt="portfolio-1"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-2-sm.jpg"
+              alt="portfolio-2"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-3-sm.jpg"
+              alt="portfolio-3"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-4-sm.jpg"
+              alt="portfolio-4"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-5-sm.jpg"
+              alt="portfolio-5"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-6-sm.jpg"
+              alt="portfolio-6"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-7-sm.jpg"
+              alt="portfolio-7"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-8-sm.jpg"
+              alt="portfolio-8"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
+          <div class="list">
+            <img
+              src="images/portfolio-9-sm.jpg"
+              alt="portfolio-9"
+              class="list-img"
+            />
+            <div class="list-description">
+              <h2 class="list-title">Vinyl Record</h2>
+              <p class="list-description-desc">Vinyl Record</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="project-testimonial">
