css: media query max width 900px structured

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
           <li>PORTFOLIO</li>
           <li>BLOG</li>
         </ul>
+
+        <!-- <ul class="nav-menu">
+          <li>ABOUT</li>
+          <li>CONTACT</li>
+          <li>PORTFOLIO</li>
+          <li>BLOG</li>
+        </ul> -->
       </div>
     </nav>
     <!-- home -->
@@ -59,32 +66,38 @@
       </div>
       <div class="about-props-container">
         <div class="about-props-wrap">
-          <div class="about-prop">
-            <i class="fas fa-briefcase"></i>
-            <div class="prop-props">
-              <div class="prop-num">548</div>
-              <div class="prop-name">PROJECTS COMPLETED</div>
+          <div class="about-props-wrap-col1">
+            <div class="about-prop">
+              <i class="fas fa-briefcase"></i>
+              <div class="prop-props">
+                <div class="prop-num">548</div>
+                <div class="prop-name">PROJECTS COMPLETED</div>
+              </div>
+            </div>
+
+            <div class="about-prop">
+              <i class="far fa-clock"></i>
+              <div class="prop-props">
+                <div class="prop-num">1465</div>
+                <div class="prop-name">WORKING HOURS</div>
+              </div>
             </div>
           </div>
-          <div class="about-prop">
-            <i class="far fa-clock"></i>
-            <div class="prop-props">
-              <div class="prop-num">1465</div>
-              <div class="prop-name">WORKING HOURS</div>
+
+          <div class="about-props-wrap-col1">
+            <div class="about-prop">
+              <i class="far fa-star"></i>
+              <div class="prop-props">
+                <div class="prop-num">612</div>
+                <div class="prop-name">POSITIVE FEEDBACKS</div>
+              </div>
             </div>
-          </div>
-          <div class="about-prop">
-            <i class="far fa-star"></i>
-            <div class="prop-props">
-              <div class="prop-num">612</div>
-              <div class="prop-name">POSITIVE FEEDBACKS</div>
-            </div>
-          </div>
-          <div class="about-prop">
-            <i class="far fa-heart"></i>
-            <div class="prop-props">
-              <div class="prop-num">735</div>
-              <div class="prop-name">HAPPY CLIENTS</div>
+            <div class="about-prop">
+              <i class="far fa-heart"></i>
+              <div class="prop-props">
+                <div class="prop-num">735</div>
+                <div class="prop-name">HAPPY CLIENTS</div>
+              </div>
             </div>
           </div>
         </div>
