css: nav-bar hamburger bars

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <div class="nav-wrap">
         <a href="index.html" class="nav-logo">
           <img src="images/logo.png" alt="logo" class="snow-logo" />
+          <img
+            src="images/logo-light.png"
+            alt="logo-light"
+            class="snow-logo white"
+          />
         </a>
         <ul class="nav-menu">
           <li>ABOUT</li>
@@ -24,7 +29,7 @@
           <li>PORTFOLIO</li>
           <li>BLOG</li>
         </ul>
-
+        <i class="fas fa-bars nav-menu-bars"></i>
         <!-- <ul class="nav-menu">
           <li>ABOUT</li>
           <li>CONTACT</li>
