js: navbar buttons moving to each link

--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
           />
         </a>
         <ul class="nav-menu">
-          <li>ABOUT</li>
-          <li>CONTACT</li>
-          <li>PORTFOLIO</li>
-          <li>BLOG</li>
+          <li data-link="#about">ABOUT</li>
+          <li data-link="#contact">CONTACT</li>
+          <li data-link="#portfolio"><a href="#">PORTFOLIO</a></li>
+          <li data-link="#blog"><a href="#">BLOG</a></li>
         </ul>
         <i class="fas fa-bars nav-menu-bars"></i>
-        <!-- <ul class="nav-menu">
-          <li>ABOUT</li>
-          <li>CONTACT</li>
-          <li>PORTFOLIO</li>
-          <li>BLOG</li>
-        </ul> -->
       </div>
     </nav>
     <!-- home -->
@@ -48,7 +42,7 @@
           <h1>We are about to change the way</h1>
           <h2>you publish on the web</h2>
         </div>
-        <button class="down-btn">
+        <button class="down-btn" data-link="#about">
           <i class="fas fa-chevron-down"></i>
         </button>
       </div>
